removed the overflow in the body element that prevented scrolling

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-* {
+/* * {
     outline: red dotted 1px;
-}
+} */
 
 body {
     margin-top: 30px;
     width: 901px;
     margin-left: auto;
     margin-right: auto;
-    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -62,7 +61,7 @@ main section h1 {
 
 main section:nth-child(1) {
     padding-right: 0;
-    margin-right: 200px;
+    margin-right: 540px;
     width: 30%;
     float: left;
 }
